[project]
name = "nukeUtils"
version = "0.1.0"
description = "Package description for nukeUtils"
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = { text = "MIT" }
authors = [
  { name = "Suhail", email = "suhailece@gmail.com" },
]
dependencies = [
  "numpy >=2.0.0,<3.0.0",
]


[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/nukeutils",
]
